package hu.bme.mario.client;

import java.awt.*;

public interface Texture {
    public Image getTexture();
}
